fix align picture

--- a/css/home.css
+++ b/css/home.css
@@ -315,8 +315,8 @@ div.hapolearn-footer-ul a {
   width: 50%;
   height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .hapolearn-why-left > h1 {
